# mlops-stack

./: .env.example  .env.production.example  .gitignore  Dockerfile.mlflow  LICENSE  README.md  docker-compose.yml  mlflow_auth_config.ini.template  pyproject.toml
examples/: llm_example.py  log_agent.py  mlflow_agent.py  mlflow_auth_example.py
scripts/: deploy_stack.py  manage_mlflow_users.py  setup_mlflow_auth.py  test_user_management.py  validate_services.py
tests/: test_stack.py
