[tool.poetry]
name = "mlops-stack"
version = "0.1.0"
description = ""
authors = ["Sean Deery <sdeery14@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
pyyaml = "^6.0.3"
requests = "^2.32.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
