[tool.poetry]
name = "mlops-stack"
version = "0.1.0"
description = ""
authors = ["Sean Deery <sdeery14@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
openai-agents = "^0.3.3"
langfuse = "^3.6.2"
nest-asyncio = "^1.6.0"
openinference-instrumentation-openai-agents = "^1.3.0"
python-dotenv = "^1.1.1"
mlflow = {version = "^3.4.0", extras = ["auth"]}
psycopg2 = "^2.9.11"


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
pyyaml = "^6.0.3"
requests = "^2.32.5"
psycopg2-binary = "^2.9.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
